--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "gsap": "^3.11.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-gsap": "^3.2.1",
+    "react-locomotive-scroll": "^0.2.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
